Remove workaround because MeerPaluten fixed this issue